--- a/skill.html
+++ b/skill.html
@@ -23,13 +23,31 @@
           <!-- Header -->
           <header id="header">
             <a href="index.html" class="logo"><strong>Yuliatun</strong> </a>
-            <nav id="page">
-              <ul>
-                <li><a href="index.html">Homepage</a></li>
-                <li><a href="skill.html">Skill & Expertise</a></li>
-                <li><a href="project.html">Project</a></li>
-              </ul>
-            </nav>
+
+            <ul class="icons">
+              <li>
+                <a
+                  href="https://github.com/yuliatun"
+                  class="icon brands fa-github"
+                  ><span class="label">Git</span></a
+                >
+              </li>
+              <li>
+                <a
+                  href="mailto:yuliatun8762@gmail.com"
+                  class="icon brad fa-envelope"
+                >
+                  <span class="label">Email</span>
+                </a>
+              </li>
+              <li>
+                <a
+                  href="https://www.linkedin.com/in/yuliatun-b83566229?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app"
+                  class="icon brands fa-linkedin-in"
+                  ><span class="label">Linked</span></a
+                >
+              </li>
+            </ul>
           </header>
 
           <!-- Section -->
@@ -76,6 +94,17 @@
       <!-- Sidebar -->
       <div id="sidebar">
         <div class="inner">
+          <nav id="menu">
+            <header class="major">
+              <h2>Menu</h2>
+            </header>
+            <ul class="menu">
+              <li><a href="index.html">Homepage</a></li>
+              <li><a href="skill.html">Skill & Expertise</a></li>
+              <li><a href="project.html">Project</a></li>
+            </ul>
+          </nav>
+
           <!-- Section -->
           <section>
             <header class="major">
