UPDATE link linkedin

--- a/project.html
+++ b/project.html
@@ -35,7 +35,7 @@
               </li>
               <li>
                 <a
-                  href="https://www.linkedin.com/in/yuliatun-b83566229?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app"
+                  href="www.linkedin.com/in/yuliatun-b83566229"
                   class="icon brands fa-linkedin-in"
                   ><span class="label">Linked</span></a
                 >
