UPDATE link linkedin 2

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
               </li>
               <li>
                 <a
-                  href="www.linkedin.com/in/yuliatun-b83566229"
+                  href="https://www.linkedin.com/in/yuliatun-b83566229/"
                   class="icon brands fa-linkedin-in"
                   ><span class="label">Linked</span></a
                 >
@@ -81,7 +81,7 @@
                 </li>
                 <li>
                   <a
-                    href="www.linkedin.com/in/yuliatun-b83566229"
+                    href="https://www.linkedin.com/in/yuliatun-b83566229/"
                     class="icon brands fa-linkedin-in"
                     ><span class="label">Linked</span></a
                   >
