--- a/project.html
+++ b/project.html
@@ -35,7 +35,7 @@
               </li>
               <li>
                 <a
-                  href="www.linkedin.com/in/yuliatun-b83566229"
+                  href="https://www.linkedin.com/in/yuliatun-b83566229/"
                   class="icon brands fa-linkedin-in"
                   ><span class="label">Linked</span></a
                 >
