Change content project

--- a/project.html
+++ b/project.html
@@ -56,7 +56,7 @@
                 <h3>
                   Sales Performance Analyst & Customer Segmentation With EXCEL
                 </h3>
-                <p>Sales Performance Analyst & Customer Segmentation.
+                <p>This analysis covers monthly sales performance by region, total profit and quantity, and annual revenue trends. It also highlights the top-selling product categories, the most frequently used shipping methods, and the customers and managers with the highest contributions to sales. Additionally, city-level sales distribution and customers with the highest purchase frequency provide further insights into the most influential areas and customer behaviors.
                   <div class="tools-row">
                     <div class="tool-item">
                       <i class="fas fa-file-excel"></i>
@@ -76,9 +76,7 @@
                 <img src="images/power-bi.png" alt="Power BI Project" />
                 <h3>Sales Overview & Customer Quality with Power BI</h3>
                 <p>
-                  Interactive Dashboard Power BI menganalisis tren penjualan,
-                  segmentasi pelanggan, dan perkiraan pendapatan dengan akurasi
-                  95%.
+                 An interactive Power BI dashboard that analyzes sales trends, customer segmentation, and revenue forecasting with 95% accuracy.
                    
                   <div class="tools-row">
                     <div class="tool-item">
